--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <nav class="mainnav text-center" id="myMainnav" role="navigation">
                     <a href="#aboutMe">About Me</a>
                     <a href="#projects">Projects</a>
-                    <a href="#contactInfo">Lets Connect</a>
+                    <a href="#contactInfo">Let&apos;s Connect</a>
                 </nav>
 
             </div>
