--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/portfolio.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="img/Ozobia.jpg">
+    <link rel="icon" href="img/Ozobia2.png">
     <title>Ozobia Nwadibia's Website</title>
 </head>
 
@@ -36,13 +36,13 @@
                 <section>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="img/Ozobia.jpg" class="profilePic img-responsive center-block">
+                            <img src="img/Ozobia2.png" class="profilePic img-responsive img-circle img-rounded center-block">
                         </div>
                     </div>
                 </section>
                 <section>
                     <div class="mainContent row text-center">
-                        <div class="col-md-12 ">
+                        <div class="col-md-12">
                             <p id="aboutMe">Hi there! My name is Ozobia Nwadibia and I live in Houston, Texas. I am a student of Web Development, principally Front-End Web Development specializing in HTML5, CSS3, JavaScript and JQuery with Git and Github. Armed with
                                 an active subscription to Lynda.com, I am constantly learning and applying the concepts learned. In addition to the foregoing, I am an avid runner. Thanks for stopping by.
                             </p>
@@ -57,23 +57,23 @@
                 <section id="top-display">
                     <div class="row text-center">
                         <div class="col-md-4">
-                            <a href="Bookmarks/beginHere.htm" target="_blank"><img class="img-responsive project-pic " src="img/bookmarks.png " alt="Personal Bookmarks "></a>
+                            <a href="Bookmarks/beginHere.htm" target="_blank"><img class="img-responsive project-pic" src="img/bookmarks.png " alt="Personal Bookmarks "></a>
                             <h3 class="text-uppercase ">Personal Bookmarks</h3>
                         </div>
                         <div class="col-md-4">
-                            <a href="Game Score Keeper/score.html" target="_blank"><img class="img-responsive project-pic " src="img/score.png " alt="Score Counter "></a>
+                            <a href="Game Score Keeper/score.html" target="_blank"><img class="img-responsive project-pic" src="img/score.png " alt="Score Counter "></a>
                             <h3 class="text-uppercase ">Score Counter </h3>
                         </div>
                         <div class="col-md-4">
-                            <a href="S.I.Measurements/mass.html" target="_blank"><img class="img-responsive project-pic " src="img/measurements.png " alt="S.I. Units "></a>
+                            <a href="S.I.Measurements/mass.html" target="_blank"><img class="img-responsive project-pic" src="img/measurements.png " alt="S.I. Units "></a>
                             <h3 class="text-uppercase ">S.I. Units &amp; Measurements</h3>
                         </div>
                     </div>
                 </section>
-                <section id="socialMedia ">
+                <section id="socialMedia">
                     <div class="socialMedia row text-center">
                         <div class="col-md-12 ">
-                            <p>Below, is my contact information. I'd be pleased to hear from you. <span class="my-pitch ">Hire Me!</span></p>
+                            <p>Below, is my contact information. I'd be pleased to hear from you. <span class="my-pitch">Hire Me!</span></p>
                             <p>Email: <a id="contactInfo" href="mailto:ozobia.cn3@gmail.com ">ozobia.cn3@gmail.com</a></p>
                             <p>You can find me on these platforms.</p>
                             <a href="https://www.linkedin.com/in/ozobianwadibia" data-toggle="tooltip" data-placement="left" title="LinkedIn" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
