--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="mainContent row text-center">
                         <div class="col-md-12">
                             <p id="aboutMe">Hi there! My name is Ozobia Nwadibia and I live in Houston, Texas. I am a student of Web Development, principally Front-End Web Development specializing in HTML5, CSS3, JavaScript and JQuery with Git and Github. Armed with
-                                an active subscription to Lynda.com, I am constantly learning and applying the concepts learned. In addition to the foregoing, I am an avid runner. Thanks for stopping by.
+                                an active subscription to Lynda.com, I am constantly learning and applying the concepts learned. In addition to the foregoing, I am a chess player. Thanks for stopping by.
                             </p>
                         </div>
                     </div>
