Rearranged files and changed main pic

--- a/html/score.html
+++ b/html/score.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
-    <link rel="stylesheet" href="scorestyles.css">
+    <link rel="stylesheet" href="../css/scorestyles.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
-    <link rel="icon" href="score.jpeg">
+    <link rel="icon" href="../assets/images/score.jpeg">
     <title>Score Keeper</title>
 </head>
 
@@ -39,7 +39,7 @@
             <button class="reset" onClick="resetB()">Reset</button>
         </div>
     </div>
-    <script src="scorescript.js"></script>
+    <script src="../js/scorescript.js"></script>
 </body>
 
 </html>
