--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/portfolio.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="img/Ozobia2.png">
+    <link rel="icon" href="./assets/images/Ozobia2.jpg">
     <title>Ozobia Nwadibia's Website</title>
 </head>
 
@@ -36,7 +36,7 @@
                 <section>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="img/Ozobia2.png" class="profilePic img-responsive img-circle img-rounded center-block">
+                            <img src="./assets/images/Ozobia2.jpg" class="profilePic img-responsive img-circle img-rounded center-block">
                         </div>
                     </div>
                 </section>
@@ -57,15 +57,15 @@
                 <section id="top-display">
                     <div class="row text-center">
                         <div class="col-md-4">
-                            <a href="Bookmarks/beginHere.htm" target="_blank"><img class="img-responsive project-pic" src="img/bookmarks.png " alt="Personal Bookmarks "></a>
-                            <h3 class="text-uppercase ">Personal Bookmarks</h3>
+                            <a href="./html/beginHere.htm" target="_blank"><img class="img-responsive project-pic" src="./assets/images/bookmarks.png" alt="Personal Bookmarks"></a>
+                            <h3 class="text-uppercase">Personal Bookmarks</h3>
                         </div>
                         <div class="col-md-4">
-                            <a href="Game Score Keeper/score.html" target="_blank"><img class="img-responsive project-pic" src="img/score.png " alt="Score Counter "></a>
+                            <a href="./html/score.html" target="_blank"><img class="img-responsive project-pic" src="./assets/images/score.png" alt="Score Counter"></a>
                             <h3 class="text-uppercase ">Score Counter </h3>
                         </div>
                         <div class="col-md-4">
-                            <a href="S.I.Measurements/mass.html" target="_blank"><img class="img-responsive project-pic" src="img/measurements.png " alt="S.I. Units "></a>
+                            <a href="./html/mass.html" target="_blank"><img class="img-responsive project-pic" src="./assets/images/measurements.png" alt="S.I. Units"></a>
                             <h3 class="text-uppercase ">S.I. Units &amp; Measurements</h3>
                         </div>
                     </div>
