--- a/html/beginHere.htm
+++ b/html/beginHere.htm
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
-    <link rel="icon" type="image/png" href="images/home.png">
-    <link rel="stylesheet" type="text/css" href="bookmarks.css">
+    <link rel="icon" type="image/png" href="../assets/images/home.png">
+    <link rel="stylesheet" type="text/css" href="../css/bookmarks.css">
     <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <title>My Bookmarks</title>
