--- a/html/cloud.htm
+++ b/html/cloud.htm
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
-    <link rel="icon" type="image/png" href="images/cloud.png">
-    <link rel="stylesheet" type="text/css" href="bookmarks.css">
+    <link rel="icon" type="image/png" href="../assets/images/cloud.png">
+    <link rel="stylesheet" type="text/css" href="../css/bookmarks.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Cloud</title>
 </head>
