--- a/html/length.html
+++ b/html/length.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="simstyle.css">
-    <link rel="icon" href="images/length.jpeg">
+    <link rel="stylesheet" href="../css/simstyle.css">
+    <link rel="icon" href="../assets/images/length.jpeg">
     <title>Length</title>
 </head>
 
@@ -44,7 +44,7 @@
             <p>&copy; Ozobia Nwadibia 2017</p>
         </footer>
     </div>
-    <script type="text/javascript" src="simscript.js"></script>
+    <script type="text/javascript" src="../js/simscript.js"></script>
 </body>
 
 </html>
