--- a/html/temperature.html
+++ b/html/temperature.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="icon" href="images/temperature.jpeg">
+    <link rel="icon" href="../assets/images/temperature.jpeg">
 
-    <link rel="stylesheet" href="simstyle.css">
+    <link rel="stylesheet" href="../css/simstyle.css">
     <title>Temperature</title>
 </head>
 
@@ -39,7 +39,7 @@
             <p>&copy; Ozobia Nwadibia 2017</p>
         </footer>
     </div>
-    <script type="text/javascript" src="simscript.js"></script>
+    <script type="text/javascript" src="../js/simscript.js"></script>
 </body>
 
 </html>
