--- a/index.html
+++ b/index.html
@@ -2,122 +2,179 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./css/portfolio.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="./assets/images/Ozobia2.jpg">
-    <title>Ozobia Nwadibia's Website</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="description" content="Ozobia Nwadibia's portfolio">
+<meta name="author" content="Ozobia Nwadibia">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<!-- CSS
+----------------------------------------------------------------------------------------------->
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="assets/bootstrap/bootstrap_css/bootstrap.min.css">
+<link rel="stylesheet" href="css/portfolio.css">
+
+
+<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!-- FAVICON
+--------------------------------------------------->
+<link rel="icon" href="./assets/images/Ozobia2.jpg">
+
+<title>Ozobia Nwadibia's Website</title>
+
 </head>
 
 <body>
-    <div class="container">
-        <header role="banner" class="row">
-            <div class="col-md-12">
-                <h1 class="author-name text-center">Ozobia Nwadibia</h1>
-                <h2 class="job-title text-center">Front-End Web Developer</h2>
+<div class="container">
+    <header role="banner" class="row">
+        <div class="col-md-12">
+            <h1 class="author-name text-center">Ozobia Nwadibia</h1>
+            <h2 class="job-title text-center">Front-End Web Developer</h2>
 
-                <nav class="mainnav text-center" id="myMainnav" role="navigation">
-                    <a href="#aboutMe">About Me</a>
-                    <a href="#projects">Projects</a>
-                    <a href="#contactInfo">Let&apos;s Connect</a>
-                </nav>
+            <nav class="mainnav text-center" id="myMainnav" role="navigation">
+                <a href="#aboutMe">About Me</a>
+                <a href="#projects">Projects</a>
+                <a href="#contactInfo">Let&apos;s Connect</a>
+            </nav>
 
-            </div>
-        </header>
-        <main role="main">
-            <article role="article">
-                <section>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <img src="./assets/images/Ozobia2.jpg" class="profilePic img-responsive img-circle img-rounded center-block">
-                        </div>
+        </div>
+    </header>
+    <main role="main">
+        <article role="article">
+            <section>
+                <div class="row">
+                    <div class="col-md-12">
+                        <img src="./assets/images/Ozobia2.jpg" class="profilePic img-fluid mx-auto d-block">
                     </div>
-                </section>
-                <section>
-                    <div class="mainContent row text-center">
-                        <div class="col-md-12">
-                            <p id="aboutMe">Hi there! My name is Ozobia Nwadibia and I live in Houston, Texas. I am a student of Web Development, principally Front-End Web Development specializing in HTML5, CSS3, JavaScript and JQuery with Git and Github. Armed with
-                                an active subscription to Lynda.com, I am constantly learning and applying the concepts learned. In addition to the foregoing, I am a chess player. Thanks for stopping by.
-                            </p>
-                        </div>
+                </div>
+            </section>
+            <section>
+                <div class="mainContent row text-center">
+                    <div class="col-md-12">
+                        <p id="aboutMe">Hi there! My name is Ozobia Nwadibia and I live in Houston, Texas. I am a student of Web Development, principally Front-End Web Development specializing in HTML5, CSS3, JavaScript and JQuery with Git and Github. Armed with
+                            an active subscription to Lynda.com, I am constantly learning and applying the concepts learned. In addition to the foregoing, I am a chess player. Thanks for stopping by.
+                        </p>
                     </div>
-                    <div class="mainContent row text-center">
-                        <div class="col-md-12">
-                            <p id="projects">My Featured Work</p>
-                        </div>
+                </div>
+                <div class="mainContent row text-center">
+                    <div class="col-md-12">
+                        <p id="projects">My Featured Work</p>
                     </div>
-                </section>
-                <section id="top-display">
-                    <div class="row text-center">
-                        <div class="col-md-4">
-                            <a href="./html/beginHere.htm" target="_blank"><img class="img-responsive project-pic" src="./assets/images/bookmarks.png" alt="Personal Bookmarks"></a>
+                </div>
+            </section>
+
+            <section id="top-display">
+                <div class="row text-center">
+                    <!-- <div class="col-md-4">
+                        <a href="./html/beginHere.htm" target="_blank"><img class="img-responsive project-pic" src="./assets/images/bookmarks.png" alt="Personal Bookmarks"></a>
+                        <h3 class="text-uppercase">Personal Bookmarks</h3>
+                    </div> -->
+                    <div class="col-md-4">
+                            <a href="https://placeholder.com" target="_blank"><img class="img-fluid project-pic" src="https://via.placeholder.com/360x195" alt="Personal Bookmarks"></a>
                             <h3 class="text-uppercase">Personal Bookmarks</h3>
                         </div>
+                    <div class="col-md-4">
+                        <a href="https://placeholder.com" target="_blank"><img class="img-fluid project-pic" src="https://via.placeholder.com/360x195" alt="Score Counter"></a>
+                        <h3 class="text-uppercase ">Score Counter </h3>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="https://placeholder.com" target="_blank"><img class="img-fluid project-pic" src="https://via.placeholder.com/360x195" alt="S.I. Units"></a>
+                        <h3 class="text-uppercase ">S.I. Units &amp; Measurements</h3>
+                    </div>
+                </div>
+            </section>
+
+            <section id="mid-display">
+                    <div class="row text-center">
                         <div class="col-md-4">
-                            <a href="./html/score.html" target="_blank"><img class="img-responsive project-pic" src="./assets/images/score.png" alt="Score Counter"></a>
-                            <h3 class="text-uppercase ">Score Counter </h3>
+                                <a href="https://placeholder.com" target="_blank"><img class="img-responsive project-pic" src="https://via.placeholder.com/360x195" alt="Employee Directory"></a>
+                                <h3 class="text-uppercase">Employee Directory</h3>
+                            </div>
+                        <div class="col-md-4">
+                            <a href="https://placeholder.com" target="_blank"><img class="img-responsive project-pic" src="https://via.placeholder.com/360x195" alt="Stocksearch Application"></a>
+                            <h3 class="text-uppercase ">Stocksearch Application </h3>
                         </div>
                         <div class="col-md-4">
-                            <a href="./html/mass.html" target="_blank"><img class="img-responsive project-pic" src="./assets/images/measurements.png" alt="S.I. Units"></a>
+                            <a href="https://placeholder.com" target="_blank"><img class="img-responsive project-pic" src="https://via.placeholder.com/360x195" alt="Kudos"></a>
                             <h3 class="text-uppercase ">S.I. Units &amp; Measurements</h3>
                         </div>
                     </div>
                 </section>
-                <section id="socialMedia">
-                    <div class="socialMedia row text-center">
-                        <div class="col-md-12 ">
-                            <p>Below, is my contact information. I'd be pleased to hear from you. <span class="my-pitch">Hire Me!</span></p>
-                            <p>Email: <a id="contactInfo" href="mailto:ozobia.cn3@gmail.com ">ozobia.cn3@gmail.com</a></p>
-                            <p>You can find me on these platforms.</p>
-                            <a href="https://www.linkedin.com/in/ozobianwadibia" data-toggle="tooltip" data-placement="left" title="LinkedIn" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
-                            <a href="https://twitter.com/ozobianwadibia" data-toggle="tooltip" data-placement="bottom" title="Twitter" target="_blank"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
-                            <a href="https://github.com/ozobianwadibia" data-toggle="tooltip" data-placement="bottom" title="Github" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
-                            <a href="https://repl.it/@ironcladdragon" data-toggle="tooltip" data-placement="right" title="Repl.It" target="_blank"><span class="replit">Repl&period;It</span></i></a>
+
+                <section id="bottom-display">
+                        <div class="row text-center">
+                            <div class="col-md-4">
+                                    <a href="https://placeholder.com" target="_blank"><img class="img-responsive project-pic" src="https://via.placeholder.com/360x195" alt="Employee Directory"></a>
+                                    <h3 class="text-uppercase">Employee Directory</h3>
+                                </div>
+                            <div class="col-md-4">
+                                <a href="https://placeholder.com" target="_blank"><img class="img-responsive project-pic" src="https://via.placeholder.com/360x195" alt="Stocksearch Application"></a>
+                                <h3 class="text-uppercase ">Stocksearch Application </h3>
+                            </div>
+                            <div class="col-md-4">
+                                <a href="https://placeholder.com" target="_blank"><img class="img-responsive project-pic" src="https://via.placeholder.com/360x195" alt="S.I. Units"></a>
+                                <h3 class="text-uppercase ">S.I. Units &amp; Measurements</h3>
+                            </div>
                         </div>
+                    </section>
+    
+            <section id="socialMedia">
+                <div class="socialMedia row text-center">
+                    <div class="col-md-12 ">
+                        <p>Below, is my contact information. I'd be pleased to hear from you. <span class="my-pitch">Hire Me!</span></p>
+                        <p>Email: <a id="contactInfo" href="mailto:ozobia.cn3@gmail.com ">ozobia.cn3@gmail.com</a></p>
+                        <p>You can find me on these platforms.</p>
+                        <a href="https://www.linkedin.com/in/ozobianwadibia" data-toggle="tooltip" data-placement="left" title="LinkedIn" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/ozobianwadibia" data-toggle="tooltip" data-placement="bottom" title="Twitter" target="_blank"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+                        <a href="https://github.com/ozobianwadibia" data-toggle="tooltip" data-placement="right" title="Github" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
                     </div>
-                </section>
-            </article>
-            <!-- This is the icon for the scroll function -->
-            <a href="#" onclick="scrollUp()" id="btn"><i class="fa fa-arrow-circle-up" aria-hidden="true"></i></a>
-        </main>
+                </div>
+            </section>
+        </article>
+        <!-- This is the icon for the scroll function -->
+        <a href="#" onclick="scrollUp()" id="btn"><i class="fa fa-arrow-circle-up" aria-hidden="true"></i></a>
+    </main>
 
-        <footer role="contentinfo" class="row">
-            <div class="col-md-12">
-                <p>&copy; Ozobia Nwadibia 2017</p>
-            </div>
-        </footer>
-    </div>
+    <footer role="contentinfo" class="row">
+        <div class="col-md-12">
+            <p>&copy; Ozobia Nwadibia&nbsp;&nbsp;&nbsp;<script type="text/javascript">
+                document.write(new Date().getFullYear());
+                </script></p>
+        </div>
+    </footer>
+</div>
 
-    <script>
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function() {
-            scrollFunction()
-        };
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("btn").style.display = "block";
-            } else {
-                document.getElementById("btn").style.display = "none";
-            }
+<script>
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function() {
+        scrollFunction()
+    };
+
+    function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            document.getElementById("btn").style.display = "block";
+        } else {
+            document.getElementById("btn").style.display = "none";
         }
-        // When the user clicks on the button, scroll to the top of the document
-        function scrollUp() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-        // JQuery code for the tooltip (social media buttons)
-        $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
+    }
+    // When the user clicks on the button, scroll to the top of the document
+    function scrollUp() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+    }
+    // JQuery code for the tooltip (social media buttons)
+    $(document).ready(function() {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
+
+<script src="js/jQuery.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="assets/bootstrap/bootstrap_js/bootstrap.min.js"></script>
+
+
 </body>
 
 </html>
