Adjusting size of portfolio pic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Ozobia Nwadibia" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- CSS
------------------------------------------------------------------------------------------------>
+--------------------------------------------------------------------------->
     <link rel="stylesheet" href="css/normalize.css" />
     <link
       rel="stylesheet"
@@ -18,7 +18,7 @@
     <!-- FONTS
 -------------------------------------------------------------------------->
     <link
-      href="https://fonts.googleapis.com/css?family=Lato"
+      href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
     <link
@@ -28,7 +28,7 @@
 
     <!-- FAVICON
 --------------------------------------------------->
-    <link rel="icon" href="./assets/images/Ozobia.jpg" />
+    <link rel="icon" href="./assets/images/Ozobia.png" />
 
     <title>Ozobia Nwadibia's Website</title>
   </head>
@@ -42,19 +42,22 @@
         </div>
       </header>
     </div>
+    <!-- container-fluid -->
 
     <main role="main">
       <article role="article">
-        <section class="container">
+        <div class="container">
           <div class="row">
             <div class="col-md-4">
               <img
-                src="./assets/images/Ozobia.jpg"
-                class="img-fluid rounded-circle profilePic"
+                src="./assets/images/Ozobia.png"
+                class="img-fluid rounded mx-auto d-block"
+                alt="main portfolio pic"
               />
             </div>
             <div class="col-md-8">
-              <p>
+              <h4 class="text-left">About Ozobia Nwadibia</h4>
+              <p class="aboutMe">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Obcaecati ex odio harum tenetur dolor quae aliquam nobis
                 voluptatum culpa excepturi voluptatem perferendis aliquid,
@@ -65,7 +68,7 @@
               </p>
             </div>
           </div>
-        </section>
+        </div>
         <!-- container -->
 
         <div class="container">
