Adding project pics/thumbnails

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Ozobia Nwadibia" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- CSS
---------------------------------------------------------------------------->
+------------------------------------------------------------------>
     <link rel="stylesheet" href="css/normalize.css" />
     <link
       rel="stylesheet"
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/portfolio.css" />
 
     <!-- FONTS
--------------------------------------------------------------------------->
+------------------------------------------------------------------->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
@@ -51,7 +51,7 @@
             <div class="col-md-4">
               <img
                 src="./assets/images/Ozobia.png"
-                class="img-fluid rounded mx-auto d-block"
+                class="img-fluid rounded-lg border border-dark mx-auto d-block portfolioPic"
                 alt="main portfolio pic"
               />
             </div>
@@ -78,58 +78,58 @@
                     <h3 class="text-uppercase">Personal Bookmarks</h3>
                 </div> -->
             <div class="col-md-4">
-              <a href="https://placeholder.com" target="_blank"
+              <a href="https://ozobianwadibia.github.io/bookmarks/" target="_blank"
                 ><img
-                  class="img-fluid"
-                  src="https://via.placeholder.com/300x200"
-                  alt="Personal Bookmarks"
+                  class="img-fluid border border-dark"
+                  src="assets/images/bookmarks.png"
+                  alt="Bookmarks"
               /></a>
-              <h4 class="text-uppercase">Personal Bookmarks</h4>
+              <h4 class="text-uppercase">Bookmarks</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://placeholder.com" target="_blank"
+              <a href="https://ozobianwadibia.github.io/score_counter/" target="_blank"
                 ><img
-                  class="img-fluid"
-                  src="https://via.placeholder.com/300x200"
+                  class="img-fluid border border-dark"
+                  src="assets/images/score.png"
                   alt="Score Counter"
               /></a>
               <h4 class="text-uppercase">Score Counter</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://placeholder.com" target="_blank"
+              <a href="https://ozobianwadibia.github.io/si_measurements/" target="_blank"
                 ><img
-                  class="img-fluid"
-                  src="https://via.placeholder.com/300x200"
-                  alt="S.I. Units"
+                  class="img-fluid border border-dark"
+                  src="assets/images/measurements.png"
+                  alt="S.I. Measurements"
               /></a>
-              <h4 class="text-uppercase">S.I. Units &amp; Measurements</h4>
+              <h4 class="text-uppercase">S.I. Measurements</h4>
             </div>
           </div>
 
           <div class="row text-center">
             <div class="col-md-4">
-              <a href="https://placeholder.com" target="_blank"
+              <a href="https://ozobianwadibia.github.io/Employee-Directory/" target="_blank"
                 ><img
-                  class="img-fluid"
-                  src="https://via.placeholder.com/300x200"
+                  class="img-fluid border border-dark"
+                  src="assets/images/employee_directory.png"
                   alt="Employee Directory"
               /></a>
               <h4 class="text-uppercase">Employee Directory</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://placeholder.com" target="_blank"
+              <a href="https://ozobianwadibia.github.io/StockSearch-Application/" target="_blank"
                 ><img
-                  class="img-fluid"
-                  src="https://via.placeholder.com/300x200"
+                  class="img-fluid border border-dark"
+                  src="assets/images/stocksearch.png"
                   alt="Stocksearch Application"
               /></a>
               <h4 class="text-uppercase">Stocksearch Application</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://placeholder.com" target="_blank"
+              <a href="https://lit-castle-43645.herokuapp.com/" target="_blank"
                 ><img
-                  class="img-fluid"
-                  src="https://via.placeholder.com/300x200"
+                  class="img-fluid border border-dark"
+                  src="assets/images/kudos.png"
                   alt="Kudos"
               /></a>
               <h4 class="text-uppercase">Kudos</h4>
@@ -185,7 +185,7 @@
       <div class="container-fluid">
         <div class="col-md-12">
           <p>
-            &copy; Ozobia Nwadibia&nbsp;&nbsp;<script
+            &copy; Ozobia Nwadibia&nbsp;&nbsp;&nbsp;<script
               type="text/javascript"
             >
               document.write(new Date().getFullYear());
@@ -227,5 +227,6 @@
     <script src="js/jQuery.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="assets/bootstrap/bootstrap_js/bootstrap.min.js"></script>
+    <script src="js/portfolio.js"></script>
   </body>
 </html>
