Adding media queries

--- a/index.html
+++ b/index.html
@@ -56,15 +56,9 @@
               />
             </div>
             <div class="col-md-8">
-              <h4 class="text-left">About Ozobia Nwadibia</h4>
+              <h4 class="text-left"><span class="name">About Ozobia Nwadibia</span></h4>
               <p class="aboutMe">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Obcaecati ex odio harum tenetur dolor quae aliquam nobis
-                voluptatum culpa excepturi voluptatem perferendis aliquid,
-                laboriosam minima eaque fugit exercitationem. Commodi ratione
-                odit odio sunt nesciunt enim eum deserunt ipsa, sequi architecto
-                eaque doloremque repellendus doloribus adipisci, eligendi illum
-                nisi cum praesentium.
+                    He is a student of web and software development. Quite passionate about the craft and the general idea of creating something out of nothing, digitally.
               </p>
             </div>
           </div>
@@ -73,10 +67,6 @@
 
         <div class="container">
           <div class="row text-center">
-            <!-- <div class="col-md-4">
-                    <a href="./html/beginHere.htm" target="_blank"><img class="img-responsive project-pic" src="./assets/images/bookmarks.png" alt="Personal Bookmarks"></a>
-                    <h3 class="text-uppercase">Personal Bookmarks</h3>
-                </div> -->
             <div class="col-md-4">
               <a href="https://ozobianwadibia.github.io/bookmarks/" target="_blank"
                 ><img
