Updating 'about me' in index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <div class="col-md-8">
               <h4 class="text-left"><span class="name">About Ozobia Nwadibia</span></h4>
               <p class="aboutMe">
-                    He is a student of web and software development. Quite passionate about the craft and the general idea of creating something out of nothing, digitally.
+                    Devoted and dedicated techie who greatly appreciates and loves web and software development. Loves coding a lot. A fast and enthusiastic learner willing to take on challenges to better oneself and those around.
+                    Quite passionate about the craft and the general idea of creating something out of nothing, digitally.
               </p>
             </div>
           </div>
